desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
* {
    -GtkRange-stepper-size: 2;
    -GtkScale-slider-length: 28;
    -GtkRange-slider-width: 28;

    -GtkTreeView-expander-size: 16;

    -GtkWidget-cursor-color: @theme_cursor_color;
    -GtkWidget-cursor-aspect-ratio: 0.08;

    -GtkWidget-focus-padding: 1;
    /* disable focusline on active notebook tabs if focused*/
    -GtkWidget-focus-line-width: 0;
    -GtkWidget-focus-line-pattern: "\002\002";

    -GtkMenu-horizontal-padding: 0;
    -GtkMenu-vertical-padding: 0;

    -GtkScrolledWindow-scrollbar-spacing: 0;
    -GtkScrolledWindow-scrollbars-within-bevel: 1;

    -GtkComboBox-arrow-scaling: 0.9;
    -GtkButton-default-border: 0;

    -GtkWindow-resize-grip-width: 15;
    -GtkWindow-resize-grip-height: 15;

    background-clip: padding-box;
}

GtkWindow {
    color: @theme_fg_color;
    background-color: @theme_base_color;
}

/* FIXME: why do we still need this? */
GtkClutterOffscreen {
    background-color: @theme_base_color;
}

*:insensitive {
    background-color: @theme_button_insensitive_bg;
    border-color: @theme_button_insensitive_active_bg;
}

*:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.gtkstyle-fallback {
    background-color: @theme_base_color;
    color: @theme_fg_color;
}

.gtkstyle-fallback:prelight {
    background-color: @theme_fg_color;
    color: @theme_base_color;
}

.gtkstyle-fallback:active {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.gtkstyle-fallback:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

.gtkstyle-fallback:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

/********
 * Misc *
 ********/
GtkCheckButton:selected,
GtkCheckButton:selected:focus {
    background-color: @theme_internal_bg;
    color: @theme_fg_color;
}

.image {
    color: @theme_active_color;
}

.image:hover {
    color: @theme_fg_color;
}

GtkLabel,
GtkLabel:insensitive,
GtkImage,
GtkImage:insensitive {
    background-color: transparent;
}

.tooltip {
    background-color: @theme_fg_color;
    color: @theme_insensitive_bg;
}

.view.rubberband,
.rubberband {
    border-color: @theme_fg_color;
    border-style: solid;
    border-width: 1px;

    background-color: alpha(@theme_internal_bg, 0.35);
}

.grip {
    background-color: @theme_insensitive_color;
}

.grip {
	background-color: transparent;
	background-image: url("resize-grip.svg");
}

.floating-bar {
    background-color: @theme_insensitive_bg;
}

GtkColorButton.button {
    padding: 1px 16px;
}

GtkColorSwatch {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;
}

/******************
 * Colored states *
 ******************/
.info {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.warning {
    background-color: @warning_bg_color;
    color: @warning_fg_color;
}

.question {
    background-color: @question_bg_color;
    color: @question_fg_color;
}

.error {
    background-color: @error_bg_color;
    color: @error_fg_color;
}

/*************
 * Level bar *
 *************/
GtkLevelBar {
    -GtkLevelBar-min-block-width: 34;
    -GtkLevelBar-min-block-height: 3;
}

GtkLevelBar.vertical {
    -GtkLevelBar-min-block-width: 3;
    -GtkLevelBar-min-block-height: 34;
}

.level-bar.trough {
    padding: 2px;
}

.level-bar.fill-block {
    padding: 2px;

    border-width: 1px;
    border-style: solid;

    background-color: @theme_highlight_color;
}

.level-bar.fill-block.level-high {
    background-color: @success_color;
    border-color: darker(@success_color);
}

.level-bar.fill-block.level-low {
    background-color: @warning_bg_color;
    border-color: darker(@warning_bg_color);
}

.level-bar.fill-block.empty-fill-block {
    background-color: transparent;
    border-color: @theme_border_color;
}

.level-bar.indicator-discrete.fill-block.horizontal {
    margin: 0 1px;
}

.level-bar.indicator-discrete.fill-block.vertical {
    margin: 1px 0;
}

/***********
 * Buttons *
 ***********/
.button {
    border-width: 2px;
    border-style: solid;
    border-color: @theme_button_fg;

    border-radius: 3px;

    background-color: @theme_button_bg;
    padding: 1px 4px;
    color: @theme_button_fg;
}

.button.image-button {
    padding: 5px;
}

.button.default {
    text-shadow: none;
    color: @theme_fg_color;
}

/* ie. mate-control-center */
.button.flat {
    padding: 0px;
    border-color: transparent;
    background-color: transparent;
    background-image: none;
    color: @theme_fg_color;
    box-shadow: inset 0 1px rgba(255,255,255,0), 0 1px rgba(255,255,255,0);
    text-shadow: none;
    icon-shadow: none;
    border-image: none;
}

.button.flat.hover {
	border-radius: 3px;
}

.button:active {
    background-color: @theme_button_active_bg;
    color: @theme_base_color;
    border-color: @theme_button_active_border;
}

.button:insensitive {
    background-color: @theme_button_insensitive_bg;
    color: @theme_button_insensitive_fg;
    border-color: @theme_button_insensitive_border;
}

GtkComboBox:insensitive {
    color: @theme_button_insensitive_fg
}

.button:insensitive:active {
    background-color: @theme_button_insensitive_active_bg;
    color: @theme_button_insensitive_active_fg;
    border-color: @theme_button_insensitive_active_border;
}

.button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
    color: @theme_base_color;
}

.button:hover:active {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

/***********
 * Entries *
 ***********/
.entry {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;

    border-radius: 3px;

    background-color: @theme_entry_bg;
    padding: 4px;
}

.entry:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}
/* ... */

